# kafka-python-example

./: .env_example  .gitignore  .prospector.yaml  Dockerfile  Procfile  README.md  config.py  consts.py  main.py  pyproject.toml  pytest.ini  receiver.py
.deploy/: store_certs.sh
.github/workflows/: config.yaml  deploy.yaml  validate.yaml
_bin/: run_web.sh
db/: main.py  models.py  schemas.py
receiver/: async.py  sync.py
router/: dependencies.py  routes.py
tests/: conftest.py  factories.py  session.py  test_api.py  test_utils.py
